syntax = "proto3";
package jarviscrawlercore;
option go_package = "github/zhs007/jccclient";

// RequestGeoIP - request geoip
message RequestGeoIP {
    // ip - ip address
    string ip = 1;
    // platform - it's like ipvoid, default is ipvoid
    string platform = 2;
}

// ReplyGeoIP - reply geoip
message ReplyGeoIP {
    float latitude = 1;
    float longitude = 2;
    string organization = 3;
    string asn = 4;
    string continent = 5;
    string country = 6;
    string region = 7;
    string city = 8;
    string hostname = 9;
}